# infra-uv

./: README.md  justfile  pyproject.toml  uv_check.py
.github/workflows/: ci.yml
tests/: test_uv_check.py
